--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
     
     <!-- importation du css -->
 
-    <link rel="stylesheet" type="text/css" href="../portfolio 3/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="../portfolio-3/css/styles.css" />
 
   </head>
   <body>
 
     <div class="video-background">
       <video autoplay muted loop id="bg-video">
-          <source src="../portfolio 3/assets/img/y2mate.com - Cool black Background_1080.mp4" type="video/mp4">
+          <source src="../portfolio-3/assets/img/y2mate.com - Cool black Background_1080.mp4" type="video/mp4">
       </video>
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item  nav-item-spaced"> <!-- Custom class -->
-            <a class="nav-link" href="../portfolio 3/index.html">Home</a>
+            <a class="nav-link" href="../portfolio-3/index.html">Home</a>
           </li>
           <li class="nav-item  nav-item-spaced"> <!-- Custom class -->
-            <a class="nav-link" href="../portfolio 3/html/cv.html">Resume</a>
+            <a class="nav-link" href="../portfolio-3/html/cv.html">Resume</a>
           </li>
           <li class="nav-item  nav-item-spaced"> <!-- Custom class -->
-            <a class="nav-link" href="../portfolio 3/html/projets.html">Projects</a>
+            <a class="nav-link" href="../portfolio-3/html/projets.html">Projects</a>
           </li>
         </ul>
       </div>
@@ -51,7 +51,7 @@
       <div class="container">
         <div class="row justify-content-center">
             <div class="text-center">
-                <img src="../portfolio 3/assets/img/arrow-down-svgrepo-com.svg" onclick="scrollToStart()" href="#start" class="custom-svg" alt="Arrow Down">
+                <img src="../portfolio-3/assets/img/arrow-down-svgrepo-com.svg" onclick="scrollToStart()" href="#start" class="custom-svg" alt="Arrow Down">
             </div>
         </div>
       </div>
@@ -62,7 +62,7 @@
       <h1 class="text-center "  style="position: relative; color: whitesmoke; text-decoration: underline; font-weight: bold; font-size: 5vh;">Who am I ?</h1>
       <p class="text-center fs-5 p-5" style="color: whitesmoke; background: rgba(255, 255, 255, 0.2); margin-top: 10vh;">I am a student at ESGI at Lyon in France. <br>I am interrested in cybersecurity and network engineering, turning my passion for technology into expertise. <br>Curious and driven, I want to specialize into  security system to help create a safer digital world.</p>
       
-      <img src="../portfolio 3/assets/img/ESGI_logo_web_blanc.jpg" class="esgi-logo-img" class="img-fluid">
+      <img src="../portfolio-3/assets/img/ESGI_logo_web_blanc.jpg" class="esgi-logo-img" class="img-fluid">
 
       <div class="container" style="width: 200vh; height: auto; position: relative; background: rgba(255, 255, 255, 0.2); backdrop-filter: blur(10px); padding: 10vh; height: 60vh; border-radius: 1em; margin-top: 20vh">
         <div class="row align-items-center" style="position: relative;">
