--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
   <body>
 
     <div class="video-background">
-      <video autoplay muted loop id="bg-video">
-          <source src="../portfolio-3/assets/img/y2mate.com - Cool black Background_1080.mp4" type="video/mp4">
+     <video autoplay muted loop id="bg-video">
+        <source src="assets/img/y2mate.com - Cool black Background_1080.mp4" type="video/mp4">
       </video>
+
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
